# gcfpack

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
doc/: index.rst
gcfpack/: __init__.py  __main__.py  commands.py  gcf.py  gcf_old.py  meta.py  serialization.py
test/: fixtures.py  test_gcf.py  test_meta.py  test_serialization.py
test/e2e/: conftest.py  test_create.py  test_init.py
test/unit/: conftest.py  test_meta.py  test_serialization.py
