[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcfpack"
description = "GCF file packer."
version = "1.0.3"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Alfredo Mungo" }]
keywords = ["gcf", "global", "container", "game", "format", "texture", "generic"]

dependencies = [
    "click",
    "pydantic",
    "pygcf@https://github.com/global-container-format/pygcf/archive/refs/tags/v4.0.0.zip#sha256=979932766b103c7df4b98567f529493afb95f18648afd26f0f991ff0c274fb3d"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia"
]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
use_parentheses = true
atomic = true

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120

[tool.sphinx]
extensions = ["sphinx.ext.autodoc", "sphinx.ext.viewcode"]
templates_path = ['_templates']
exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store']


# -- Options for HTML output -------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#options-for-html-output

html_theme = 'haiku'
html_static_path = ['_static']
nitpicky = true

[tool.setuptools]
packages = ["gcfpack"]

[tool.setuptools.package-data]
gcfpack = ["py.typed"]
