[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcfpack"
description = "GCF file packer."
version = "2.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Alfredo Mungo" }]
keywords = ["gcf", "global", "container", "game", "format", "texture", "generic"]

dependencies = [
    "click",
    "pydantic",
    "pygcf@https://github.com/global-container-format/pygcf/archive/refs/tags/v5.0.1.zip#sha256=d5558cd419c8d46bdc958064cb97f963d1ea793866414c025906ec15033512ed"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia"
]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
use_parentheses = true
atomic = true

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120

[tool.sphinx]
extensions = ["sphinx.ext.autodoc", "sphinx.ext.viewcode"]
templates_path = ['_templates']
exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store']


# -- Options for HTML output -------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#options-for-html-output

html_theme = 'haiku'
html_static_path = ['_static']
nitpicky = true

[tool.setuptools]
packages = ["gcfpack"]

[tool.setuptools.package-data]
gcfpack = ["py.typed"]
