[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcfpack"
description = "GCF file packer."
version = "2.0.2"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Alfredo Mungo" }]
keywords = ["gcf", "global", "container", "game", "format", "texture", "generic"]

dependencies = [
    "click",
    "pydantic",
    "pygcf@https://github.com/global-container-format/pygcf/archive/refs/tags/v5.1.1.zip#sha256=410c71b8317dd63ee81bdd3cb047ab1ff61c3eeb620c209230533394b398f21d"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia"
]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
use_parentheses = true
atomic = true

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120

[tool.sphinx]
extensions = ["sphinx.ext.autodoc", "sphinx.ext.viewcode"]
templates_path = ['_templates']
exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store']


# -- Options for HTML output -------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#options-for-html-output

html_theme = 'haiku'
html_static_path = ['_static']
nitpicky = true

[tool.setuptools]
packages = ["gcfpack"]

[tool.setuptools.package-data]
gcfpack = ["py.typed"]
